<resources>
    <string name="app_name">Tourist</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to_fedart_tourist_guide_application_brisbane_this_beautiful_city_has_a_river_going_from_the_heart_of_the_city">Welcome to FEDART tourist guide application, Brisbane. This beautiful city has a river going from the heart of the city.</string>
    <string name="brisbane_virtual_tour">Brisbane Virtual Tour</string>
    <string name="brisbane_top_view">Brisbane Top View</string>
    <string name="todo">TODO</string>
    <string name="scan_qr">Scan Qr Code</string>
    <string name="button">Button</string>
    <string name="fed_art">FED ART</string>
    <string name="textview">TextView</string>
    <string name="Menu" />
    <string name="scan_qr_code_to_scan_the_code_and_get_the_points">Scan Qr Code and get the points.</string>
    <string name="upload">Upload</string>
    <string name="contribute">Contribute</string>
    <string name="select_the_pictureto_upload">Select images to upload.</string>
    <string name="photos_from_gallery">Photos from Gallery.</string>
    <string name="to_do">TODO</string>
    <string name="to_doo">TODO</string>
    <string name="too_do">TODO</string>
    <string name="discover">Discover</string>
    <string name="photos_uploaded_by_users">Photos Uploaded by users.</string>
    <string name="toodo">TODO</string>
    <string name="toodoo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="fed_store">Fed Store</string>
    <string name="with_available_pobalance_you_are_able_to_buy_the_below_mentioned_merchandise_alternatively_click_the_button_below_to_go_the_website_to_buy_more_merchandise_online">With Available pobalance you are able to buy the below mentioned merchandise, Alternatively Click the button below to go the website to buy more merchandise online.</string>
    <string name="please_check_in_at_the_reception_at_uni_after_buying_it_from_here_or_the_marketplace_within_the_application">Please check in at the reception at uni after buying it from here or the marketplace within the application.</string>
    <string name="these_fedcoins_can_be_exchanged_for_federation_university_merchandise">These Fedcoins can be exchanged for Federation University Merchandise.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="go_back">Go Back</string>
    <string name="log_in">Log In</string>
    <string name="login">Log In</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">forgot your password?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_maps">Maps</string>
    <string name="title_camera">Camera</string>
    <string name="userPref">userPref</string>
    <string name="userdata">userdata</string>
    <string name="brisbane_tour_guide">A.R Brisbane Tour Guide</string>
    <string name="souht_bank">South Bank</string>
    <string name="ann_st">Ann St.</string>
    <string name="art_gallery">Federation University Art Gallery</string>
    <string name="profile">Profile</string>
    <string name="marketplace">Marketplace</string>
    <string name="fedcoin">Fedcoin</string>
    <string name="about">About</string>
    <string name="help_feedback">Help and Feedback</string>
    <string name="location_sharing">Location Sharing</string>
    <string name="see_more">See More</string>
    <string name="help">Help</string>
    <string name="send">Send</string>
    <string name="item_for_token">"Item for # token "</string>
    <string name="sample_text">Sample Text</string>
    <string name="privacy">privacy</string>
    <string name="whats_new">Whats New Today</string>
    <string name="browse_all">Browse All</string>
    <string name="scan_qr_to_initiate">Scan the QR code\nto initiate.</string>
    <string name="fed_gallery">Fed Gallery</string>
    <string name="brisbane_tour">Brisbane Tour</string>
</resources>