<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.draft1.MainActivity">
    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/sun"
        android:title="@string/discover" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/map_pin"
        android:title="@string/title_maps" />

    <item
        android:id="@+id/navigation_contribute"
        android:icon="@drawable/plus_circle"
        android:title="@string/contribute" />


</menu>