<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        style="@style/HeadingTV"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/contribute"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/HeadingTV"
        android:layout_marginTop="16dp"
        android:text="@string/select_the_pictureto_upload"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/UploadImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/camImg"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_upload1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/camImg1"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_margin="6dp"
                    android:layout_toRightOf="@+id/camImg"
                    android:layout_weight="0.5"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_upload2" />

                <ImageView
                    android:id="@+id/camImg2"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_below="@+id/camImg"
                    android:layout_margin="6dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="0.5"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_upload3" />

            </LinearLayout>

            <ImageView
                android:id="@+id/camImg3"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_below="@+id/camImg2"
                android:layout_margin="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_upload4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/camImg4"
                    android:layout_width="195dp"
                    android:layout_height="160dp"
                    android:layout_below="@+id/camImg2"
                    android:layout_margin="6dp"
                    android:layout_toRightOf="@+id/camImg3"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_upload1" />


                <ImageView
                    android:id="@+id/camImg5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@+id/camImg3"
                    android:layout_margin="6dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_upload2" />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <Button
        android:id="@+id/UploadImg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#000000"
        android:text="@string/upload"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>